k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-user-api
spec:
  selector:
    app: ecom-user-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
